--- a/index.html
+++ b/index.html
@@ -5,28 +5,87 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Why Did You Click?</title>
   <style>
+    /* Reset some default styles */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    
     body {
-      font-family: Arial, sans-serif;
-      background-color: #2c2f33;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(45deg, #ff6f61, #f7b731, #1e3799, #6a4c93);
+      background-size: 400% 400%;
+      animation: gradientShift 10s ease infinite;
       color: #ffffff;
       text-align: center;
       padding: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      flex-direction: column;
     }
+
+    /* Gradient animation */
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+    
     h1 {
-      font-size: 3em;
+      font-size: 4em;
+      font-weight: bold;
       margin-bottom: 20px;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+      color: #f2f2f2;
     }
+
     p {
       font-size: 1.5em;
       margin-bottom: 30px;
+      line-height: 1.6;
     }
+
     a {
-      color: #7289da;
+      display: inline-block;
+      background-color: #7289da;
+      color: white;
+      padding: 15px 30px;
+      font-size: 1.2em;
       text-decoration: none;
-      font-weight: bold;
+      border-radius: 8px;
+      transition: background-color 0.3s ease, transform 0.2s ease;
     }
+
     a:hover {
-      text-decoration: underline;
+      background-color: #5b6eae;
+      text-decoration: none;
+      transform: scale(1.05);
+    }
+
+    a:active {
+      transform: scale(1);
+    }
+
+    #fake-info {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 20px;
+      margin-top: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+      color: #dcdcdc;
+    }
+
+    #fake-info p {
+      font-size: 1.2em;
+      font-weight: normal;
+    }
+
+    /* Custom cursor */
+    body {
+      cursor: url('https://cdn.jsdelivr.net/npm/@iconify/icons-emojione-v1/cursor-emoji@1x.png'), auto;
     }
   </style>
 </head>
@@ -35,12 +94,14 @@
   <p>You clicked a link without knowing where it leads. Why? 🤔</p>
   <p>Always be cautious. Not every link is safe!</p>
   <div id="fake-info"></div>
-  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Go somewhere safe</a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Go somewhere safe</a>
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      const fakeInfoMessage = `<p>Did you know? It's easy for websites to gather information about you without your knowledge.</p>
-      <p>Be mindful of the sites you visit and always stay safe online!</p>`;
+      const fakeInfoMessage = `
+        <p>Did you know? It's easy for websites to gather information about you without your knowledge.</p>
+        <p>Be mindful of the sites you visit and always stay safe online!</p>
+      `;
       const infoElement = document.getElementById('fake-info');
       infoElement.innerHTML = fakeInfoMessage;
     });
