--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCT<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -14,7 +14,7 @@
 
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(45deg, #ff6f61, #f7b731, #1e3799, #6a4c93);
+      background: linear-gradient(45deg, #944D76, #8E4D94 , #6a4c93, #4D5394 );
       background-size: 400% 400%;
       animation: gradientShift 10s ease infinite;
       color: #ffffff;
@@ -103,3 +103,4 @@
   </script>
 </body>
 </html>
+
