--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <p>You clicked a link without knowing where it leads. Why? 🤔</p>
   <p>Always be cautious. Not every link is safe!</p>
   <div id="fake-info"></div>
-  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Go somewhere safe</a>
+  <a href="https://www.youtube.com/watch?v=iik25wqIuFo" target="_blank">Go somewhere safe</a>
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
